chore: Add compiler configs